--- a/Common.cfg
+++ b/Common.cfg
@@ -1,6 +1,6 @@
-NumberOfPreferredNeighbors 2
+NumberOfPreferredNeighbors 3
 UnchokingInterval 5
-OptimisticUnchokingInterval 15
-FileName TheFile.dat
-FileSize 10000232
-PieceSize 32768
+OptimisticUnchokingInterval 10
+FileName thefile
+FileSize 2167705
+PieceSize 16384
